# parallel-lab5

./: .gitignore  CMakeLists.txt
resource/: index.html  not_found.html  page2.html
src/: common.cpp  common.h  http_specific.cpp  http_specific.h  main.cpp
src/pool/: concurrent_queue.h  thread_pool.cpp  thread_pool.h
